# ProgrammingForMechatronicSystems

./: README.md
assignments/assignment1/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  main.cpp
assignments/assignment1/build-sensorassignment-Desktop-Default/: CMakeCache.txt  Makefile  accelerometer  cmake_install.cmake  sensorassignment  sensorassignment.cbp
assignments/assignment1/peer_review/1436D64798EA19F090576A23D6043A2F0D255D9A/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.h
assignments/assignment1/peer_review/7ABC7B20DC9817AD59F6A44C51D76D79E7B4654E/PSM_A1/: Accelerometer.cpp  Accelerometer.h  CMakeLists.txt  VAccelerometer.cpp  VAccelerometer.h  main.cpp
assignments/assignment1/peer_review/82ED8565DA04BE1E1061E01644DD85096839C1CF/97115051/: CMakeLists.txt  axis_accelerometer_sensor.cpp  axis_accelerometer_sensor.h  main.cpp
assignments/assignment2/: CMakeLists.txt  Laser.cpp  Laser.h  Radar.cpp  Radar.h  Radar1.cpp  Radar1.h  Radar2.cpp  Radar2.h  Ranger.cpp  Ranger.h  RangerFusionInterface.h  compiling_error.txt  laser.cpp  laser.h  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.cpp  rangerfusioninterface.h
assignments/assignment2-build/: CMakeCache.txt
assignments/assignment2/peer_review/559E1FD45717B9B414D20A424BD55E5B81D2D21B/: CMakeLists.txt  laser.cpp  laser.h  main.cpp  radarLeft.cpp  radarLeft.h  radarRight.cpp  radarRight.h  ranger.cpp  ranger.h  rangerFusion.cpp  rangerFusion.h
assignments/assignment3/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  data_fusion.cpp  data_fusion.h  main  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  sonar.cpp  sonar.h
assignments/assignment3/Peer_Review3/11219805/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  main  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.cpp  rangerfusioninterface.h  sonar.cpp  sonar.h
assignments/assignment3/Peer_Review3/11219805/doc/html/: index.html
assignments/assignment3/Peer_Review3/11219805/doc/latex/: refman.tex
assignments/assignment3/Peer_Review3/3/: Assignment3_  CMakeCache.txt  CMakeLists.txt  CustomTypes.h  Makefile  NotificationBuffer.cpp  NotificationBuffer.h  RangerBuffer.cpp  RangerBuffer.h  RangerFusion.cpp  RangerFusion.h  ThreadBuffer.cpp  ThreadBuffer.h  cmake_install.cmake  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  sonar.cpp  sonar.h
assignments/assignment3/Peer_Review3/A3_97117446/: A3.cpp  A3_97117446  CMakeCache.txt  CMakeLists.txt  DataFusion.cpp  DataFusion.h  Doxyfile  Doxyfile.in  Makefile  Radar.cpp  Radar.h  Ranger.cpp  Ranger.h  SensorDataGenerator.cpp  SensorDataGenerator.h  Sonar.cpp  Sonar.h  cmake_install.cmake  index.dox
assignments/assignment3/doc/html/: annotated.html  classDataFusion-members.html  classDataFusion.html  classRadar-members.html  classRadar.html  classRanger-members.html  classRanger.html  classSonar-members.html  classSonar.html  classes.html  data__fusion_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_34e32b2767b9a66498b8d81e5df7818f.html  dir_cd3db5597f2261188045d3f032b6e500.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  radar_8h_source.html  ranger_8h_source.html  sonar_8h_source.html
assignments/assignment3/doc/html/search/: all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
assignments/assignment3/doc/latex/: annotated.tex  classDataFusion.tex  classRadar.eps  classRadar.tex  classRanger.eps  classRanger.tex  classSonar.eps  classSonar.tex  hierarchy.tex  refman.tex
assignments/assignment5/: launch.sh
assignments/assignment5/bagfiles/: subset.bag  (+1 more)
assignments/assignment5/catkin_ws/src/controller/: CMakeLists.txt  CMakeLists.txt.old  package.xml
assignments/assignment5/catkin_ws/src/controller/doc/: manifest.yaml
assignments/assignment5/catkin_ws/src/controller/doc/html/: a5__main_8cpp.html  a5__main_8cpp__incl.map  a5__main_8cpp__incl.md5  a5__main_8cpp_source.html  annotated.html  classes.html  classinstant-members.html  classinstant.html  dir_3fcf6a7c5f1992d8a5e5b58324b8b7ba.html  dir_d3bff1ab3a40b4e5d0775c67ace1b0da.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  instant_8cpp.html  instant_8cpp__incl.map  instant_8cpp__incl.md5  instant_8cpp_source.html  instant_8h.html  instant_8h__dep__incl.map  instant_8h__dep__incl.md5  instant_8h__incl.map  instant_8h__incl.md5  instant_8h_source.html  structgoalPx-members.html  structgoalPx.html  structpixel-members.html  structpixel.html
assignments/assignment5/catkin_ws/src/controller/src/: a5_main.cpp  a5_main.h  instant.cpp  instant.h
assignments/assignment5/catkin_ws/src/controller/test/: utest.cpp
assignments/build-assignment2-Desktop-Default/: CMakeCache.txt  Makefile  Ranger  assignment2.cbp  cmake_install.cmake  main
build-week02-Desktop-Default/: Makefile  cmake_install.cmake  functions  pointers
in_class/week01/: CMakeLists.txt  arrays.cpp
in_class/week02/: RandomArray.cpp  RandomArray.h  Rectangle.cpp  Rectangle.h
in_class/week03/: rectangle.h
in_class/week05/: CMakeLists.txt  CMakeLists.txt~  main.cpp
in_class/week06/: CMakeLists.txt  CMakeLists.txt~  main.cpp
in_class/week12/answers/add_two_ints_client/: CMakeLists.txt  package.xml
in_class/week12/answers/listener_class/: CMakeLists.txt  package.xml
in_class/week12/answers/listener_class/include/ros_listener_tutorial/: listener_class.h
in_class/week12/answers/listener_class/src/: listener_class.cpp  main.cpp  talker.cpp
in_class/week12/answers/listener_class/test/: utest.cpp
week01/: functions.cpp  pointers.cpp
week02/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  classes.cpp  compiling_error.txt  pointers.cpp
week02/answers/: CMakeLists.txt
week02/build-week02-Desktop-Default/: CMakeCache.txt  classes
(+245 files in other folders)
