<?xml version="1.0"?>
<package>
  <name>ros_listener_tutorial</name>
  <version>0.7.1</version>
  <description>
    This package attempts to show the feature of ROS listeners
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/roscpp_tutorials</url>
  <url type="bugtracker">https://github.com/ros/ros_tutorials/issues</url>
  <url type="repository">https://github.com/ros/ros_tutorials</url>
  <author>Morgan Quigley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
