<package format="2">
  <name>controller</name>
  <version>1.2.4</version>
  <description>
  This package provides controller capability for assignment 5.
  </description>
  <maintainer email="99133391@student.uts.edu.au">PR-foobar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
